--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -1,5 +1,139 @@
-Body {
-	font-size: 16 px;
-	color: #fff;
-	background-color: 61122f;
-	font-family: 'Oxygen', sans-serif;}
+{  box-sizing: border-box;}
+
+h1 {
+  font-size: 35px;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  text-align: center;}
+
+p {
+  padding: 10px 5px 0px 5px;
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  font-size: 18px;
+  position: relative;
+
+  }
+
+.section { 
+  background-color: DarkGrey;
+    width: 100%;
+    height: auto;
+    padding: 15px;
+    text-align: justify;
+    position: relative;
+    }
+
+.container {
+  border: none;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 10px;}
+
+
+#chicken {
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  text-align: center;
+  font-size: 30px;}
+
+#beef {
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  text-align: center;
+  font-size: 30px;}
+  
+
+#sushi {
+  font-family: "Comic Sans MS", cursive, sans-serif;
+  text-align: center; 
+  font-size: 30px;}
+
+.row {width: 100%;}
+
+
+
+@media (min-width: 992px) 
+
+  {.col-lg-4 {
+    width: 33.33%;
+    float: left;}}
+
+
+@media (min-width: 768px) and (max-width: 991px) 
+
+  { .col-md-6 {
+    width: 50%;
+    float: left;}
+  .col-md-12 {
+    width: 100%;
+    float: left;
+  }
+}
+
+
+@media (max-width: 767px)  {
+  
+  .col-sx-12 {
+    float: left;
+    width: 100%;
+  }
+}
+
+
+#chic-div {
+  margin-bottom: 10px;
+  margin-top: 10px;
+  ;
+}
+
+#beef-div {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+#sushi-div {
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+
+
+
+#header-nav {
+   background-color: DarkGrey;
+  color: Black;
+  
+}
+
+.navbar-header button.navbar-toggle, .navbar-header .icon-bar {
+  border: 1px solid black;
+}
+.navbar-header button.navbar-toggle {
+  clear: both;
+
+}
+
+.nav-header {
+  background-color: Black;
+}
+
+.nav-brand {
+  color: Black;
+  font-size: 45px;
+  text-align: left;
+}
+
+#nav-list {
+  color: black;
+  background-color: White;
+}
+
+hr {
+  border-color: black;
+
+}
+
+.item {
+  color: black;
+  font-size: 20px;
+  
+}
